--- a/packages/scrabble-solver/src/components/Loading/Loading.module.scss
+++ b/packages/scrabble-solver/src/components/Loading/Loading.module.scss
@@ -30,6 +30,6 @@
 }
 
 .tiles {
-  width: 298px;
+  width: 100% * 2 / 3;
   height: 100%;
 }
